# wg-conf

./: Cargo.toml  README.md  TODO.md  build.rs  conf.ini  test.ini  wg0.conf
.circleci/: config.yml
common/: Cargo.toml
common/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
examples/certs/: domains.ext  localhost.crt  localhost.csr  localhost.key  rootCA.crt  rootCA.key  rootCA.srl
examples/conf/: conf.ini  test.ini
examples/scripts/: auth_check.bat  auth_check.sh
hooks/: Cargo.toml
hooks/src/: lib.rs
proto/: wg-conf.proto
src/: main.rs
src/client/: auth.rs  config.rs  mod.rs
src/server/: auth.rs  config.rs  mod.rs
src/server/backend/: crypto.rs  memory.rs  mod.rs
