[package]
name = "wg-conf"
version = "0.1.3"
authors = ["dan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["common", "crypto", "hooks"]

[dependencies]
### -> tonic dependencies
tonic = {version = "0.8", features = ["tls"]}
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
### <- 
clap = "2.34"
log = "0.4"
pretty_env_logger = "0.4"
rust-ini = {git="https://github.com/dahateb/rust-ini"}
ipnetwork = "0.19"
url = "2.2.0"
crypto = { path = "crypto" }
hooks = { path = "hooks" }
common = { path = "common" }
simple-error = "0.2.2"
http = "0.2.7"
hyper = "0.14"
tower = { version = "0.4" }
base64 = "0.13"
tempfile = "3.2.0"

[build-dependencies]
tonic-build = { version = "0.8" }

[profile.release]
lto = true