[package]
name = "crypto"
version = "0.0.1"
authors = ["dhahn <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = "1.2.0"
base64 = "0.13"
rand_core = { version = "0.5", default-features = false }