[package]
name = "crypto"
version = "0.0.1"
authors = ["dhahn <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = {version = "2.0.1", features = ["static_secrets"]}
base64 = "0.22.1"
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"]}